Fixed code view for dark mode

--- a/docs/_sass/minima/_base.scss
+++ b/docs/_sass/minima/_base.scss
@@ -176,7 +176,8 @@ code {
   background-color: #eef;
 
   @media (prefers-color-scheme: dark) {
-    border: 1px solid $grey-color-darkmode-light
+    border: 1px solid $grey-color-darkmode-light;
+    background-color: rgb(103, 103, 109);
   }
 }
 
